IKE: Life-Duration wrong displayed in LTV format
This issue was migrated from bug 6206 in our old bug tracker.
Original bug information:
Reporter: Arjan Filius
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: Ubuntu
Platform: Other
Version: 1.6.1
Attachments:
: Screenshot of the display Life-Duration in TLV format bug
bug6206_1.patch: Patch the attempts to handle the variable length life duration attribute.