Life duration is a variable length TLV, and not always a 2 byte value.  Hopefully fixes bug 6206 (no relevant capture file available to test). Reference: https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=6206

svn path=/trunk/; revision=38387